Hosted Gallery - show image counter on mobile, and fix some social sharing links etc

--- a/static/src/stylesheets/module/commercial/glabs/_hosted-gallery.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-gallery.scss
@@ -298,12 +298,23 @@ $progressColor: #ffffff;
     display: block;
 }
 
+.use-swipe .hosted-gallery__progress {
+    display: block;
+    pointer-events: none;
+    .inline-arrow-up,
+    .inline-arrow-down {
+        display: none;
+    }
+}
+
 .hosted-gallery__progress {
     display: none;
     position: absolute;
     top: 50%;
     margin-top: $progressHeight / -2;
-    right: 0;
+    right: -10px;
+    height: $progressHeight;
+    width: $progressHeight;
 
     .hosted-gallery__image-count {
         @include f-headlineSans;
